--- a/senti/templates/upload_text.html
+++ b/senti/templates/upload_text.html
@@ -2,19 +2,13 @@
     <div class="modal-dialog">
 
         <div class="modal-content">
-            {% comment %}
-            <div class="modal-header">
-                <button class="close" data-dismiss="modal" type="button">&times;</button>
-
-                <h4 class="modal-title">上傳檔案</h4>
-            </div>
-            {% endcomment %}
-
             <ul class="nav nav-tabs">
                 <li class="active">
-                    <a data-toggle="tab" href="#uploadFile">上傳檔案</a>
+                    <a data-toggle="tab" href="#uploadFile">上傳文本</a>
                 </li>
-
+                <li class="">
+                    <a data-toggle="tab" href="#pasteText">貼上文本</a>
+                </li>
                 <li class="">
                     <a data-toggle="tab" href="#modifyTag">增修標記</a>
                 </li>
@@ -31,8 +25,15 @@
                         </form>
                     </div>
 
+                    <div class="tab-pane fade" id="pasteText">
+                        <form action="." method="post">{% csrf_token %} 
+                            {{paste_text_form.as_p}} 
+                            <button type="submit" class="btn btn-default">貼上</button>
+                        </form>
+                    </div>
+
                     <div class="tab-pane fade" id="modifyTag">
-                        <form action="." method="post" enctype="multipart/form-data">{% csrf_token %} 
+                        <form action="." method="post">{% csrf_token %} 
                             {{modify_tag_form.as_p}} 
                             <button type="submit" class="btn btn-default">修改</button>
                         </form>
