--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>LOPE Tagger</title>
+    <title>LOPE Annotator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- Bootstrap -->
@@ -51,16 +51,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="{% url 'senti_main' %}" class="navbar-brand">LOPE Tagger</a>
+                <a href="{% url 'senti_main' %}" class="navbar-brand">{# LOPE Tagger #}</a>
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse">
                 <ul class="nav navbar-nav">
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
-                        <li><a href="#" data-toggle="modal" data-target="#uploadText">{{user}}</a></li>
-                        <li><a href="#" id="signout">登出</a></li>
+                        <li><a href="#" data-toggle="modal">{{user}}</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#uploadText">設定</a></li>
                         <li><a href="#" onClick="introJs().start()">操作說明</a></li>
+                        <li><a href="#" id="signout">登出</a></li>
                     {% else %}
                         <li><a href="#signup" data-toggle="modal" data-target="#accountModal" data-intro="由此可以快速註冊一個新帳號或登入">登入/註冊</a></li>
                     {% endif %}
