--- a/senti/templates/upload_text.html
+++ b/senti/templates/upload_text.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="uploadText">
+<div class="modal fade" id="userSetting">
     <div class="modal-dialog">
 
         <div class="modal-content">
@@ -12,7 +12,6 @@
                 <li class="">
                     <a data-toggle="tab" href="#modifyTag">增修標記</a>
                 </li>
-
             </ul>
 
 
@@ -21,21 +20,21 @@
                     <div class="tab-pane fade active in" id="uploadFile">
                         <form action="." method="post" enctype="multipart/form-data">{% csrf_token %}
                             {{upload_text_form.as_p}}
-                            <button class="btn btn-default">上傳</button>
+                            <input class="btn btn-default" type="submit" name="uploadFile" value="上傳" />
                         </form>
                     </div>
 
                     <div class="tab-pane fade" id="pasteText">
                         <form action="." method="post">{% csrf_token %} 
                             {{paste_text_form.as_p}} 
-                            <button type="submit" class="btn btn-default">貼上</button>
+                            <input class="btn btn-default" type="submit" name="pasteText" value="貼上" />
                         </form>
                     </div>
 
                     <div class="tab-pane fade" id="modifyTag">
                         <form action="." method="post">{% csrf_token %} 
-                            {{modify_tag_form.as_p}} 
-                            <button type="submit" class="btn btn-default">修改</button>
+                            {{modify_tag_form.as_p}}
+                            <input class="btn btn-default" type="submit" name="modifyTag" value="修改" />
                         </form>
                     </div>
                 </div>
@@ -43,8 +42,7 @@
             </div>
 
             <div class="modal-footer">
-                <button class="btn btn-default" data-dismiss="modal" type=
-                "button">Close</button>
+                <button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
             </div>
         </div>
     </div>
