--- a/senti/templates/senti_main.html
+++ b/senti/templates/senti_main.html
@@ -45,6 +45,7 @@ LOPE Annotator
             <br>
             <div id="cand_text" data-intro="選取要標記的字串後，標記選項即會跳出"></div>
             <br> 
+            <button class="btn btn-danger">刪除此文</button>
         </div>
         <div class="col-md-6">
             <div id='cat-box' data-intro="這裡顯示您已標記的字串，在該字串上點兩下即可刪除"></div>
