--- a/senti/templates/senti_main.html
+++ b/senti/templates/senti_main.html
@@ -39,18 +39,18 @@
     <div class="row _main">
         <div class="col-md-6">
             <div class="row">
-                <div class="col-md-4">
-                    <button class="btn btn-default btn-sm page-nav" data-val='-1'><span class="glyphicon glyphicon-chevron-left"></span>上一篇</button>
+                <div class="col-md-2">
+                    <button class="btn btn-default btn-sm page-nav" data-val='-1'><span class="glyphicon glyphicon-chevron-left"></span></button>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-8">
                     <div class="input-group input-group-sm"><span class="input-group-btn"><button class="btn btn-default btn-sm" data-toggle="modal" data-target="#postListModal"><span class="glyphicon glyphicon-search"></span>
                         </button>
                         </span>
                         <input type="number" class="form-control" id="goToPage" placeholder="" data-intro="直接輸入到達指定頁碼">
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <button class="btn btn-default btn-sm page-nav" data-val='1' style="float:right">下一篇<span class="glyphicon glyphicon-chevron-right"></span></button>
+                <div class="col-md-2">
+                    <button class="btn btn-default btn-sm page-nav" data-val='1' style="float:right"><span class="glyphicon glyphicon-chevron-right"></span></button>
                 </div>
             </div>
             <div class="clearfix"></div>
